Close out the remaining small note-tier CodeQL categories
- GuardedString now overrides toString() so it never inherits Object's
  default (fixes call-to-object-tostring at its two call sites in one
  place instead of patching each site).
- AttributeTypeUtil.createInstantiatedObject wraps its numeric parsing
  in the same try/catch -> ConnectorException pattern used elsewhere
  (uncaught-number-format-exception), and switches from deprecated
  boxed constructors to the static parse methods.
- Remove the dead ContractTestFactory inner class and its now-unused
  imports.
- Mechanical fixes: StringUtil/XSDAnnotationParser empty-string checks,
  PrettyStringBuilder's Map iteration via entrySet(), a shadowed local
  in LdapInternalSearch, a javadoc @param typo/gap in MultiOpTests, and
  a missing space in a log message in ActiveDirectoryChangeLogSyncStrategy.