@@ -22,6 +22,8 @@
  * "Portions Copyrighted 2010 [name of copyright owner]"
  *
  * $Id$
+ *
+ * Portions Copyrighted 2026 3A Systems LLC.
  */
 package org.forgerock.openicf.connectors.xml.util;
 
@@ -44,47 +46,46 @@ public class AttributeTypeUtil {
 
     public static Object createInstantiatedObject(String attrValue, String javaclass) {
         if (javaclass.equals(XmlHandlerUtil.STRING)) {
-            String s = new String(attrValue);
-            return s;
+            return attrValue;
         }
         else if (javaclass.equals(XmlHandlerUtil.INT_PRIMITIVE)) {
-            int i = new Integer(attrValue);
+            int i = parseInt(attrValue);
             return i;
         }
         else if (javaclass.equals(XmlHandlerUtil.INTEGER)) {
-            Integer i = new Integer(attrValue);
+            Integer i = parseInt(attrValue);
             return i;
         }
         else if (javaclass.equals(XmlHandlerUtil.LONG)) {
-            Long l = new Long(attrValue);
+            Long l = parseLong(attrValue);
             return l;
         }
         else if (javaclass.equals(XmlHandlerUtil.LONG_PRIMITIVE)) {
-            long l = new Long(attrValue);
+            long l = parseLong(attrValue);
             return l;
         }
         else if (javaclass.equals(XmlHandlerUtil.BOOLEAN)) {
-            Boolean b = new Boolean(attrValue);
+            Boolean b = Boolean.valueOf(attrValue);
             return b;
         }
         else if (javaclass.equals(XmlHandlerUtil.BOOLEAN_PRIMITIVE)) {
-            boolean b = new Boolean(attrValue);
+            boolean b = Boolean.parseBoolean(attrValue);
             return b;
         }
         else if (javaclass.equals(XmlHandlerUtil.DOUBLE)) {
-            Double d = new Double(attrValue);
+            Double d = parseDouble(attrValue);
             return d;
         }
         else if (javaclass.equals(XmlHandlerUtil.DOUBLE_PRIMITIVE)) {
-            double d = new Double(attrValue);
+            double d = parseDouble(attrValue);
             return d;
         }
         else if (javaclass.equals(XmlHandlerUtil.FLOAT)) {
-            Float f = new Float(attrValue);
+            Float f = parseFloat(attrValue);
             return f;
         }
         else if (javaclass.equals(XmlHandlerUtil.FLOAT_PRIMITIVE)) {
-            float f = new Float(attrValue);
+            float f = parseFloat(attrValue);
             return f;
         }
         else if (javaclass.equals(XmlHandlerUtil.CHARACTER)) {
@@ -117,6 +118,38 @@ public class AttributeTypeUtil {
         }
         else {
             return null;
+        }
+    }
+
+    private static int parseInt(String attrValue) {
+        try {
+            return Integer.parseInt(attrValue);
+        } catch (NumberFormatException e) {
+            throw new ConnectorException("Malformed int value in the XML: '" + attrValue + "'", e);
+        }
+    }
+
+    private static long parseLong(String attrValue) {
+        try {
+            return Long.parseLong(attrValue);
+        } catch (NumberFormatException e) {
+            throw new ConnectorException("Malformed long value in the XML: '" + attrValue + "'", e);
+        }
+    }
+
+    private static double parseDouble(String attrValue) {
+        try {
+            return Double.parseDouble(attrValue);
+        } catch (NumberFormatException e) {
+            throw new ConnectorException("Malformed double value in the XML: '" + attrValue + "'", e);
+        }
+    }
+
+    private static float parseFloat(String attrValue) {
+        try {
+            return Float.parseFloat(attrValue);
+        } catch (NumberFormatException e) {
+            throw new ConnectorException("Malformed float value in the XML: '" + attrValue + "'", e);
         }
     }
 
